--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -30,7 +30,29 @@
   font-style: italic;
 }
 
-p, h1, h2, h3, h4, h5, h6, li, a, span, button, input, textarea, select, label, legend, caption, blockquote, dfn, address, summary, details, section {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li,
+a,
+span,
+button,
+input,
+textarea,
+select,
+label,
+legend,
+caption,
+blockquote,
+dfn,
+address,
+summary,
+details,
+section {
   font-family: 'Open-Dyslexic', sans-serif;
 }
 
