Revert "Feat/printer (#7)"
This reverts commit d0a5bbb985f7e8a00d7cf034d6c6c8f36583c701.

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -30,29 +30,7 @@
   font-style: italic;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-a,
-span,
-button,
-input,
-textarea,
-select,
-label,
-legend,
-caption,
-blockquote,
-dfn,
-address,
-summary,
-details,
-section {
+p, h1, h2, h3, h4, h5, h6, li, a, span, button, input, textarea, select, label, legend, caption, blockquote, dfn, address, summary, details, section {
   font-family: 'Open-Dyslexic', sans-serif;
 }
 
